# iu-nlp-spring2024

./: README.MD  pyproject.toml
Assignment1/: Assignment1.ipynb  README.MD
Assignment2/: Assignment2.ipynb
