[tool.poetry]
name = "nlp-spring24"
version = "0.1.0"
description = "nlp course Innopolis University spring2024"
authors = ["Said Kamalov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
